fix：修复快速预览空结果导致的求解失败